--- a/src/Components/map.css
+++ b/src/Components/map.css
@@ -9,6 +9,12 @@
 
 .Map .leaflet-container {
   height: 100%;
+  border-radius: 20px;
+  box-shadow: 0 0 30px 10px black;
+}
+
+.dark .Map {
+  background-color: rgb(118, 110, 126);
 }
 
 .info-flag img {
